--- a/Main.css
+++ b/Main.css
@@ -1,7 +1,13 @@
 body {
     background-color: aliceblue;
+    margin:0px;
+    padding:0px;
+}
+p {
+    word-break: break-all;
 }
 .btn1{
+    width:100%;
     background-color: azure;
     border: black 1px solid;
     width:240px;
@@ -10,4 +16,19 @@ body {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    margin:0 10px 0 10px;
+}
+.OptionMeny{
+    margin-top:10px;
+    display:flex;
+    justify-content: center;
+}
+.content{
+    margin-top:100px;
+    margin-left:50%;
+    width: 1080px;
+    height: 680px;
+    transform: translateX(-540px);
+    border: 1px solid black;
+    background-color: white;
 }
